--- a/src/app/pages/business-performance/business-performance.component.html
+++ b/src/app/pages/business-performance/business-performance.component.html
@@ -1,17 +1,16 @@
 <div class="container">
   <mat-toolbar color="primary" class="toolbar">
     <div class="toolbar-left">
-    <span class="spacer"></span>
-    <button mat-button color="primary">Dashboards</button>
-    <button mat-button color="primary">Agendamentos</button>
-    <button mat-button color="primary">Clientes</button>
-    <button mat-button color="primary">Serviços</button>
-    <button mat-button color="primary">Relatórios</button>
-    <button mat-button color="primary">Pagamentos</button>
-    <button mat-button color="primary">Produtos</button>
-    <button mat-button color="primary">Profissionais</button>
-  </div>
-
+      <span class="spacer"></span>
+      <button mat-button color="primary">Dashboards</button>
+      <button mat-button color="primary">Agendamentos</button>
+      <button mat-button color="primary">Clientes</button>
+      <button mat-button color="primary">Serviços</button>
+      <button mat-button color="primary">Relatórios</button>
+      <button mat-button color="primary">Pagamentos</button>
+      <button mat-button color="primary">Produtos</button>
+      <button mat-button color="primary">Profissionais</button>
+    </div>
   </mat-toolbar>
 
   <div class="content">
@@ -57,7 +56,7 @@
       </div>
 
       <!-- Segunda linha de três cards -->
-      <div class="grid-item">
+      <div class="grid-item products-sold">
         <mat-card>
           <mat-card-header>
             <mat-icon>shopping_cart</mat-icon>
@@ -70,7 +69,7 @@
         </mat-card>
       </div>
 
-      <div class="grid-item">
+      <div class="grid-item feedback-received">
         <mat-card>
           <mat-card-header>
             <mat-icon>feedback</mat-icon>
@@ -83,7 +82,7 @@
         </mat-card>
       </div>
 
-      <div class="grid-item">
+      <div class="grid-item unnamed-card">
         <mat-card>
           <mat-card-header>
             <mat-icon>help_outline</mat-icon>
@@ -95,5 +94,14 @@
         </mat-card>
       </div>
     </div>
+    <!-- Novo card grande à direita -->
+    <mat-card class="large-card">
+      <mat-card-header>
+        <mat-card-title>Card Grande</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <p>Conteúdo do card grande.</p>
+      </mat-card-content>
+    </mat-card>
   </div>
 </div>
