--- a/src/app/pages/business-performance/business-performance.component.css
+++ b/src/app/pages/business-performance/business-performance.component.css
@@ -3,13 +3,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap'); */
 
 :root {
-  --primary-color: #3f51b5;
-  --background-color: #f5f5f5;
-  --card-background: #ffffff;
-  --card-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px;
-  --text-primary: #333333;
-  --text-muted: #777777;
-  --border-color: #e0e0e0;
+  --primary-color: #1c1c1e; /* Cor mais escura para o header */
+  --background-color: #121212; /* Cor de fundo mais escura */
+  --card-background: #1f1f1f; /* Fundo dos cards mais escuro */
+  --text-primary: #e0e0e0; /* Texto primário mais claro para contraste */
+  --text-muted: #9e9e9e; /* Texto muted também mais claro */
+  --border-color: #2c2c2e; /* Cor da borda mais escura */
 }
 
 body {
