--- a/src/app/pages/business-relatorios/business-relatorios.component.css
+++ b/src/app/pages/business-relatorios/business-relatorios.component.css
@@ -1,120 +1,36 @@
-body {
-  background-color: #181818;
-  color: #fff;
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
+.grid {
+  display: grid;
+  gap: 1.5rem; /* Aumenta ligeiramente o espaço entre os grids */
 }
 
-header {
-  background-color: #282828;
-  padding: 20px 0;
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
+.md\:grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
-.logo {
-  float: left;
-  font-size: 24px;
-  font-weight: bold;
+.lg\:grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
-nav {
-  float: right;
+/* Aumentando o tamanho máximo das divs */
+.card {
+  max-width: 350px; /* Ajusta esse valor para aumentar o tamanho */
+  margin: auto; /* Centraliza as divs no espaço disponível */
 }
 
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+.p-4 {
+  padding: 1.5rem; /* Aumenta o padding para as divs */
 }
 
-nav li {
-  display: inline-block;
-  margin-left: 20px;
+.title {
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: #bb86fc;
 }
 
-nav a {
-  color: #fff;
-  text-decoration: none;
-}
-
-main {
-  padding: 20px 0;
-}
-
-.section {
-  background-color: #383838;
-  padding: 20px;
-  border-radius: 10px;
-  margin-bottom: 20px;
-}
-
-h2 {
-  margin-top: 0;
-  color: #f9aa33;
-}
-
-p {
-  margin-bottom: 10px;
-}
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-th, td {
-  padding: 10px;
-  border-bottom: 1px solid #484848;
-  text-align: left;
-}
-
-th {
-  background-color: #484848;
-}
-
-footer {
-  background-color: #282828;
-  padding: 10px 0;
-  text-align: center;
-  margin-top: 20px;
-}
-
-.section:nth-child(odd) {
-  background-color: #383838;
-}
-
-.section:nth-child(even) {
-  background-color: #484848;
-}
-
-/* Estilos para as tabelas */
-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 10px;
-}
-
-th, td {
-  padding: 10px;
-  border-bottom: 1px solid #484848;
-  text-align: left;
-}
-
-th {
-  background-color: #484848;
-  font-weight: bold;
-}
-
-/* Estilos para os ícones de usuário */
-.user-icon {
-  width: 20px;
-  height: 20px;
-  margin-right: 10px;
-  vertical-align: middle;
+.icon {
+  color: #bb86fc;
 }
